# ChaosModV-scratchpad

./: .gitmodules
.github/workflows/: asi-vcxproj-check.yml
ChaosMod/: CMakeLists.txt  LuaScripts.cpp  Main.cpp  stdafx.h
ChaosMod/Components/: DebugSocket.cpp  DebugSocket.h  EffectDispatcher.cpp  EffectDispatcher.h  TwitchVoting.h  WebListener.cpp  WebListener.h
ChaosMod/Effects/: EffectThreads.cpp  EffectThreads.h
ChaosMod/Effects/db/Player/: PlayerHacking.cpp  PlayerWantedController.cpp
ChaosMod/Memory/: Audio.h  Entity.h  Memory.cpp  Physics.h  Script.h  Shader.h  UI.h  Vehicle.h
ChaosMod/Memory/Hooks/: ScriptThreadRunHook.cpp
ChaosMod/Util/: EntityIterator.h  Events.h  OptionsFile.h  json.hpp
ConfigApp/: ConfigApp.csproj
ConfigApp/MainWindow/: MainWindow.xaml  MainWindow.xaml.cs  MetaTab.cs
TwitchChatVotingProxy/: TwitchVotingReceiver.cs
TwitchChatVotingProxy/ChaosPipe/: ChaosPipeClient.cs
WebServer/: CMakeLists.txt  index.css  index.html  index.js  login.html  main.cpp  string_helpers.h
